# PartyUp

./: .gitignore  .replit  README.md  flake.nix  pyproject.toml  replit.nix  run.sh  treefmt.nix
.devcontainer/: devcontainer.json
assets/: banner.avif
shells/default/: default.nix
shells/poetry/: default.nix
src/: __init__.py  options.py  party.py
